force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/breg_WEB_WEB_BUSINESS_INFO__c.object-meta.xml
<CustomObject>
    <label>WEB BUSINESS INFO</label>
    <nameField>
        <label>WEB BUSINESS INFO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WEB BUSINESS INFOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>