force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>WEB BUSINESS INFOs</relationshipLabel>
    <relationshipName>WEB_BUSINESS_INFOs</relationshipName>
    <type>Lookup</type>
</CustomField>