force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_CONSENT_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_CONSENT_NAME__c</fullName>
    <label>CONSENT NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>