force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_COUNTRY_FORMED__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_COUNTRY_FORMED__c</fullName>
    <label>COUNTRY FORMED</label>
    <length>2</length>
    <type>Text</type>
</CustomField>