force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_COUNTRY_OF_INC__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_COUNTRY_OF_INC__c</fullName>
    <label>COUNTRY OF INC</label>
    <length>3</length>
    <type>Text</type>
</CustomField>