force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_Web_Entity__c.field-meta.xml
<CustomField>
    <fullName>breg_Web_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WEB BUSINESS INFOs</relationshipLabel>
    <relationshipName>WEB_BUSINESS_INFOs</relationshipName>
    <type>Lookup</type>
</CustomField>