force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_EXPIRATION_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_EXPIRATION_DT__c</fullName>
    <label>EXPIRATION DT</label>
    <type>Date</type>
</CustomField>