force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_FILE_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_FILE_SUFFIX__c</fullName>
    <label>FILE SUFFIX</label>
    <length>2</length>
    <type>Text</type>
</CustomField>