force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_INITIAL_LLC_MEMBERS__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_INITIAL_LLC_MEMBERS__c</fullName>
    <label>INITIAL LLC MEMBERS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>