force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_LIMIT_2__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_LIMIT_2__c</fullName>
    <label>LIMIT 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>