force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_LLP_FL__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_LLP_FL__c</fullName>
    <label>LLP FL</label>
    <length>1</length>
    <type>Text</type>
</CustomField>