force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_LOCALITY_OF_INC__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_LOCALITY_OF_INC__c</fullName>
    <label>LOCALITY OF INC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>