force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_ORGANIZATION_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_ORGANIZATION_DT__c</fullName>
    <label>ORGANIZATION DT</label>
    <type>Date</type>
</CustomField>