force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_PARTNER_MAINTENANCE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PARTNER_MAINTENANCE__c</fullName>
    <label>PARTNER MAINTENANCE</label>
    <length>3</length>
    <type>Text</type>
</CustomField>