force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_REGISTRANT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_REGISTRANT__c</fullName>
    <label>REGISTRANT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>