force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_SIC_CODE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_SIC_CODE__c</fullName>
    <label>SIC CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>