force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_TERM__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_TERM__c</fullName>
    <label>TERM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>