force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_VOTE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_VOTE__c</fullName>
    <label>VOTE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>