force-app/main/default/objects/breg_WEB_WEB_BUSINESS_INFO__c/fields/breg_WEB_WORK_ITEM_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_WORK_ITEM_ID__c</fullName>
    <externalId>true</externalId>
    <label>WORK ITEM ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>